syntax = "proto3";
package m25.gold;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gold/params.proto";
import "gold/nft.proto";
// this line is used by starport scaffolding # 1

option go_package = "m25/x/gold/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/m25/gold/params";
  }
  // Queries a Nft by index.
	rpc Nft(QueryGetNftRequest) returns (QueryGetNftResponse) {
		option (google.api.http).get = "/m25/gold/nft/{index}";
	}

	// Queries a list of Nft items.
	rpc NftAll(QueryAllNftRequest) returns (QueryAllNftResponse) {
		option (google.api.http).get = "/m25/gold/nft";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetNftRequest {
	  string index = 1;

}

message QueryGetNftResponse {
	Nft nft = 1 [(gogoproto.nullable) = false];
}

message QueryAllNftRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllNftResponse {
	repeated Nft nft = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
